<resources>
    <string name="app_name">Le-Model</string>
    <string name="catalog">Catalog</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="discounts">Discounts</string>
    <string name="new_" translatable="false">New</string>
    <string name="best_price">Best price</string>
    <string name="search">Search</string>
    <string name="sorting">Sorting</string>
    <string name="all">All</string>
    <string name="to_cart">To cart</string>
    <string name="in_the_cart">In tne cart</string>
    <string name="to_favorites">To favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="color">Color</string>
    <string name="choose_size">Choose size</string>
    <string name="table_of_sizes">Table of size</string>
    <string name="you_may_like">You may like</string>
    <string name="you_searched">You searched</string>
    <string name="categories">Categories</string>
    <string name="nothing_found">Nothing found</string>
    <string name="number_of_items">Number of items</string>
    <string name="sum_total">Sum total</string>
    <string name="discount_sum">Discount sum</string>
    <string name="total_payable">Total payable</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="category">Category</string>
    <string name="preposition_of">of</string>
    <string name="currency" translatable="false">₽</string>
    <string name="stock_unit">pcs.</string>
    <string name="close">Close</string>
    <string name="cart_is_empty">Cart is currently empty. Choose\nsomething in the catalog</string>
    <string name="check_out">Go to checkout</string>
    <string name="last_item">Last item</string>
    <string name="remove">Remove</string>
    <string name="do_not_have_favorites">You don\'t have any favorites yet.\nThe desired product will be\ncarefully stored here</string>
    <string name="bust_girth">Bust girth</string>
    <string name="waist_girth">Waist girth</string>
    <string name="hip_girth">Hip girth</string>
    <string name="rus" translatable="false">rus</string>
    <string name="cm">cm</string>
    <string name="select_size">Select size</string>
    <string name="select_color_and_size">Select color and size</string>
    <string name="cant_find_size">Can\'t find the right size?</string>
    <string name="sign_up_fitting">Sign up for a fitting</string>
    <string name="we_will_send_sms">We will send an SMS message with a confirmation code to the number</string>
    <string name="auth_for_add_products">Log in to add products to your favorites and sync your collections across all devices</string>
    <string name="auth_for_order">Log in to place an order</string>
    <string name="you_accept">By clicking on the button, you accept</string>
    <string name="the_user_agreement">the user agreement</string>
    <string name="and">and</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="sent_a_message">Sent a message to:</string>
    <string name="get_code">Get code</string>
    <string name="confirm">Confirm</string>
    <string name="login_signup">Login/Sign up</string>
    <string name="enter_code">Enter code from SMS</string>
    <string name="send_again">Send again</string>
    <string name="phone_number_silent_hint">Phоne number</string>
    <string name="code_from_sms">Code from SMS</string>
    <string name="code_emulate">Hey your code is 0000</string>
    <string name="sth_went_wrong">Something went wrong</string>
    <string name="code_is_wrong">Code is wrong</string>
    <string name="ordering">Ordering</string>
    <string name="name_silent_hint">Namе</string>
    <string name="checkout">Checkout</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="way_to_get">Way to get</string>
    <string name="pickup_from_showroom">Pickup from showroom</string>
    <string name="delivery">Delivery</string>
    <string name="locality">Locality</string>
    <string name="postcode">Postcode</string>
    <string name="street">Street</string>
    <string name="houseNumber">House number</string>
    <string name="apartment">Apartment</string>
    <string name="payment">Payment</string>
    <string name="about_payment_terms">About payment terms</string>
    <string name="other_clarifications">Other clarifications</string>
    <string name="order_details">Order details important to you</string>
    <string name="your_order">Your order</string>
    <string name="view_map">View on the map</string>
    <string name="thanks_order">Thank you, your order №</string>
    <string name="has_been_completed">has been completed!</string>
    <string name="manager_will_contact">The manager will contact you to clarify the details</string>
    <string name="vk" translatable="false">Vkontakte</string>
    <string name="youtube" translatable="false">Youtube</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="choose">Choose</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Th</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="empty_error">can not be empty</string>
    <string name="incorrect_error">is incorrect</string>
    <string name="newest">Sort newest</string>
    <string name="bypriceasc">Sorting by price ascending</string>
    <string name="bypricedesc">Sorting by price descending</string>
</resources>