<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.ElisiaNix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <RelativeLayout
            android:id="@+id/dialogLabelContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dialogLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_signup"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/dialogCloseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="-4dp"
                android:src="@drawable/ic_close" />
        </RelativeLayout>

        <TextView
            android:id="@+id/authMessageFromScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/auth_for_add_products"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/authMessageCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/we_will_send_sms"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/phone_number_silent_hint"
            app:boxBackgroundColor="@color/transparent"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:hintTextColor="@color/black45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authNumberEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="16sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getCodeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:enabled="false"
            android:paddingVertical="13dp"
            android:text="@string/get_code"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/authAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.4"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>