<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingBottom="40dp"
    android:theme="@style/Theme.ElisiaNix">

    <ImageView
        android:id="@+id/dialogCloseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="-4dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/dialogCloseBtn">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/orderedMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lineSpacingMultiplier="1.5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/manager_will_contact"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/vkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:checkable="true"
        app:cardCornerRadius="1dp"
        app:cardElevation="0dp"
        app:checkedIcon="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textContainer">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="6dp"
            android:drawableStart="@drawable/ic_vk"
            android:drawablePadding="6dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/vk"
            android:textAlignment="center"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/youtubeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:cardCornerRadius="1dp"
        app:cardElevation="0dp"
        app:checkedIcon="@null"
        app:layout_constraintEnd_toStartOf="@id/telegramBtn"
        app:layout_constraintStart_toEndOf="@id/vkBtn"
        app:layout_constraintTop_toBottomOf="@id/textContainer">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="6dp"
            android:drawableStart="@drawable/ic_youtube"
            android:drawablePadding="6dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/youtube"
            android:textAlignment="center"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/telegramBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:checkable="true"
        app:cardCornerRadius="1dp"
        app:cardElevation="0dp"
        app:checkedIcon="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textContainer">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="6dp"
            android:drawableStart="@drawable/ic_telegram"
            android:drawablePadding="6dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/telegram"
            android:textAlignment="center"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>